--- a/index.html
+++ b/index.html
@@ -5,37 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Espartanos Gym</title>
     <!-- hojas de estilo -->
-    <link rel="stylesheet" href="./css/style.css" />
-    <!-- boostrap -->
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-  <!-- favicon -->
-<link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+    <!-- Iconos Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
   </head>
   <body>
-<!-- codigo -->
+    <!-- Encabezado -->
+    <header class="header container-fluid d-flex align-items-center justify-content-around py-2">
+      <div class="logo">
+        <img src="./img/logo.png" class="img-fluid" alt="Logo Espartanos Gym" />
+      </div>
+      <!-- Menú de navegación -->
+      <nav class="navbar">
+        <ul class="navbar__list navbar-nav d-flex flex-row gap-5">
+          <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Entrenadores</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Tienda</a></li>
+        </ul>
+      </nav>
+      <!-- Botones -->
+      <div class=".botones d-flex gap-3">
+        <button class="btn btn-primary">Login</button>
+        <button class="btn btn-secondary">Crear Cuenta</button>
+      </div>
+      <!-- Barra de búsqueda -->
+      <div class="search d-flex ms-3">
+        <input type="text" class="form-control" placeholder="Buscar..." />
+        <button class="btn btn-outline-secondary" type="submit">
+          <i class="bi bi-search"></i>
+        </button>
+      </div>
+    </header>
+ <!-- Carrusel -->
+ <section class="container-fluid p-0">
+  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/nt1.jpg" class="d-block w-100" alt="Imagen 1">
+      </div>
+      <div class="carousel-item">
+        <img src="img/nt2.jpg" class="d-block w-100" alt="Imagen 2">
+      </div>
+      <div class="carousel-item">
+        <img src="img/nt3.jpg" class="d-block w-100" alt="Imagen 3">
+      </div>
+      <div class="carousel-item">
+        <img src="img/nt4.jpg" class="d-block w-100" alt="Imagen 4">
+      </div>
+      <div class="carousel-item">
+        <img src="img/nt5.jpg" class="d-block w-100" alt="Imagen 5">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section>
 
 
 
 
-
-
-
-
-    <!-- script bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
