--- a/html/quienesSomos.html
+++ b/html/quienesSomos.html
@@ -1,108 +1,137 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <title>Espartanos Gym</title>
-    <link rel="stylesheet" href="../css/style.css" />
-  </head>
-  <body>
 
-    <header class="header">
-      <div class="container-fluid d-flex align-items-center justify-content-between">
-        
-        <!-- Logo -->
-        <div class="logo"> 
- 
-          <!-- El logo se aplicará con CSS -->
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/quienesSomos.css" />
+  <title>Espartanos Gym</title>
 
-        <!-- Navegación -->
-        <nav>
-          <ul class="nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">QUIÉNES SOMOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">ENTRENADORES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">TIENDA</a>
-            </li>
-          </ul>
-        </nav>
+</head>
 
-        <!-- Botones -->
-        <div class="botones">
-          <button class="btn btn-dark" id="login">LOGIN</button>
-          <button class="btn btn-dark" id="crear-cuenta">CREA TU CUENTA</button>
-        </div>
+<body>
 
-        <!-- Barra de búsqueda -->
-        <div class="buscar position-relative">
-          <input type="text" class="form-control" placeholder="Buscar...">
-          <i class="fa-solid fa-xmark close-icon"></i>
-        </div>        
+  <header class="header">
+    <!-- Barra de Navegación -->
+    <nav class="navbar navbar-expand-lg navbar-dark py-3">
+      <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+              <img src="../img/logo.png" alt="Logo" style="width: 120px;">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+              <ul class="navbar-nav">
+                  <li class="nav-item mx-3"><a class="nav-link active" href="#">Inicio</a></li>
+                  <li class="nav-item mx-3"><a class="nav-link" href="quienesSomos.html">¿Quiénes somos?</a></li>
+                  <li class="nav-item mx-3"><a class="nav-link" href="#">Entrenadores</a></li>
+                  <li class="nav-item mx-3"><a class="nav-link" href="#">Tienda</a></li>
+              </ul>
+          </div>
+          <form class="d-flex ms-auto search-bar">
+              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+              <button class="btn btn-transparent" type="submit">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-search" viewBox="0 0 16 16">
+                      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 1.415-1.415l-3.85-3.85zm-5.442 0a5.5 5.5 0 1 1 7.778-7.778 5.5 5.5 0 0 1-7.778 7.778z"/>
+                  </svg>
+              </button>
+          </form>
+          <button class="btn btn-transparent ms-3" type="button">Login</button>
+          <button class="btn btn-transparent ms-2" type="button">Crea tu cuenta</button>
       </div>
-    </header>
+    </nav>
+  </header>
 
-    <!-- Sección "¿Quiénes somos?" -->
-    <section class="quienes-somos">
-      <div class="container">
+  <!-- contenido principal -->
+  <main class="main">
+
+      <!-- Sección "¿Quiénes somos?" -->
+      <section class="quienes-somos">
+
         <h1 class="text-center">¿Quiénes somos?</h1>
-        <div class="row mt-4">
-          <!-- Texto principal -->
-          <div class="col-md-6">
-            <p>En Espartanos Gym, creemos que un gimnasio es más que un lugar para entrenar; es un espacio donde te sientes acompañado y apoyado en cada paso de tu transformación personal.</p>
-            <p>Desde el primer día, nos propusimos ser un gimnasio diferente. No solo nos enfocamos en el ejercicio, sino que también ofrecemos una guía integral para una vida saludable, donde la buena alimentación y el bienestar mental son igual de importantes que la fuerza física.</p>
-            <p>Nuestro equipo de entrenadores y nutricionistas está aquí para brindarte el apoyo que necesitas, ayudándote a alcanzar tus metas y a sentirte seguro en cada movimiento. Queremos que encuentres en Espartanos Gym un espacio donde no solo desarrolles tu cuerpo, sino también tu confianza.</p>
+        <div class="container">
+  
+          <div class="row mt-4">
+            <!-- Texto principal -->
+            <div class="col-md-10">
+              <p>En Espartanos Gym, creemos que un gimnasio es más que un lugar para entrenar; es un espacio donde te sientes acompañado y apoyado en cada paso de tu transformación personal.</p>
+              <p>Desde el primer día, nos propusimos ser un gimnasio diferente. No solo nos enfocamos en el ejercicio, sino que también ofrecemos una guía integral para una vida saludable, donde la buena alimentación y el bienestar mental son igual de importantes que la fuerza física.</p>
+              <p>Nuestro equipo de entrenadores y nutricionistas está aquí para brindarte el apoyo que necesitas, ayudándote a alcanzar tus metas y a sentirte seguro en cada movimiento. Queremos que encuentres en Espartanos Gym un espacio donde no solo desarrolles tu cuerpo, sino también tu confianza.</p>
+            </div>
           </div>
-       <!-- Imágenes al lado derecho: 2 arriba y 2 abajo -->
-       <div class="col-md-4 d-flex flex-column align-items-center">
-        <div class="row mb-3">
-          <div class="col-6">
-            <img src="../img/logo.png" class="img-fluid" alt="Buena alimentación">
-            <p>Buena alimentación</p>
+  
+         <!-- Imágenes al lado derecho: 2 arriba y 2 abajo -->
+         <div class="col-md-6 d-flex flex-column align-items-center">
+          <div class="row mb-4">
+            <div class="col-6">
+              <img src="../img/pexels-bemistermister-3490348.jpg" class="img-fluid" alt="Buena alimentación">
+              <p>Buena alimentación</p>
+            </div>
+            <div class="col-6">
+              <img src="../img/pexels-olly-3766211.jpg" class="img-fluid" alt="Salud mental">
+              <p>Salud mental</p>
+            </div>
           </div>
-          <div class="col-6">
-            <img src="../img/logo.png" class="img-fluid" alt="Salud mental">
-            <p>Salud mental</p>
+          <div class="row">
+            <div class="col-6">
+              <img src="../img/pexels-cottonbro-7675412.jpg" class="img-fluid" alt="Bienestar físico">
+              <p>Bienestar físico</p>
+            </div>
+            <div class="col-6">
+              <img src="../img/pexels-victorfreitas-703014.jpg" class="img-fluid" alt="Entrenamiento personalizado">
+              <p>Entrenamiento personalizado</p>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-6">
-            <img src="../img/logo.png" class="img-fluid" alt="Bienestar físico">
-            <p>Bienestar físico</p>
-          </div>
-          <div class="col-6">
-            <img src="../img/logo.png" class="img-fluid" alt="Entrenamiento personalizado">
-            <p>Entrenamiento personalizado</p>
-          </div>
+        </div>
+  
+        <div class="text-center mt-4">
+          <button class="btn btn-primary" onclick="window.location.href='conoceMas.html';">Conoce más</button>
+        </div>
+      </section>
+
+  </main>
+
+
+
+  <!-- pie de página-->
+  <footer>
+    <div class="contenedorfinal">
+      <div class="textofinal">
+        <div class="contacto">
+          <i class="bi bi-telephone-inbound"></i>
+          <span class="textocontacto"> Contacto</span>
+          <span>+ 34 123 456 789</span>
+        </div>
+
+        <div class="email">
+          <i class="bi bi-envelope"></i>
+          <span class="textoemail">Email</span>
+          <span>info@spartangym.com</span>
+        </div>
+
+        <div class="redessociales"></div>
+        <i class="bi bi-globe"></i>
+        <span class="sigueme">Síguenos en nuestras redes sociales:</span> </br>
+        <div class="media">
+          <a target="_blank" href="https://es-la.facebook.com/"><i class="bi bi-facebook"></i></a>
+          <a target="_blank" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+          <a target="_blank" href="https://x.com/"><i class="bi bi-twitter"></i></a>
+        </div>
+
+        <div class="horario">
+          <i class="bi bi-alarm"></i>
+          <span class="textohorario">Horario:</span>
+          <span>Lunes a Viernes: 6:00 - 22:00 | Sábado: 8:00 - 18:00 </span>
         </div>
       </div>
+  </footer>
 
-      <div class="text-center mt-4">
-        <button class="btn btn-primary" onclick="window.location.href='conoceMas.html';">Conoce más</button>
-      </div>
-      </div>
-
-    </section>
-
-    <footer class="footer bg-orange text-white">
-      <div class="container d-flex align-items-center justify-content-between">
-        <!-- Sección de logo -->
-        <div class="logo-footer">
-          <!-- El logo se ingresa desde CSS -->
-        </div>
-      </div>
-    </footer>
-
-  </body>
+</body>
 
 
 </html>
