Se agrega la sección conoce más y algunos estilos V.2.0.0

--- a/html/quienesSomos.html
+++ b/html/quienesSomos.html
@@ -65,7 +65,7 @@
           </div>
   
          <!-- Imágenes al lado derecho: 2 arriba y 2 abajo -->
-         <div class="col-md-6 d-flex flex-column align-items-center">
+         <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
           <div class="row mb-4">
             <div class="col-6">
               <img src="../img/pexels-bemistermister-3490348.jpg" class="img-fluid" alt="Buena alimentación">
