--- a/Tienda.html
+++ b/Tienda.html
@@ -32,16 +32,16 @@
           <!-- Menú de navegación centrado -->
           <ul class="navbar-nav mx-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">¿Quiénes somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Entrenadores</a>
+              <a class="nav-link" href="./entrenadores.html">Entrenadores</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tienda</a>
+              <a class="nav-link active" href="./Tienda.html">Tienda</a>
             </li>
           </ul>
   
