--- a/entrenadores.html
+++ b/entrenadores.html
@@ -22,10 +22,10 @@
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
-              <li class="nav-item mx-3"><a class="nav-link active" href="#">Inicio</a></li>
+              <li class="nav-item mx-3"><a class="nav-link active" href="./index.html">Inicio</a></li>
               <li class="nav-item mx-3"><a class="nav-link" href="#">¿Quiénes somos?</a></li>
               <li class="nav-item mx-3"><a class="nav-link" href="./entrenadores.html">Entrenadores</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="#">Tienda</a></li>
+              <li class="nav-item mx-3"><a class="nav-link" href="./Tienda.html">Tienda</a></li>
           </ul>
       </div>
       <form class="d-flex ms-auto search-bar">
