--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">¿Quiénes somos?</a>
+            <a class="nav-link" href="">¿Quiénes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Entrenadores</a>
+            <a class="nav-link" href="./entrenadores.html">Entrenadores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Tienda</a>
+            <a class="nav-link" href="./Tienda.html">Tienda</a>
           </li>
         </ul>
 
