--- a/html/clasesYprogramas.html
+++ b/html/clasesYprogramas.html
@@ -7,7 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../css/quienesSomos.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="../css/clasesYprogramas.css" />
   <title>Espartanos Gym</title>
 
 </head>
@@ -48,11 +49,71 @@
 
   <!-- contenido principal -->
   <main class="main">
-
-
-
+    <section class="clases-programas container py-4">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <!-- Pestañas de navegación -->
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="cardio-tab" data-bs-toggle="tab" data-bs-target="#cardio-tab-pane" type="button" role="tab" aria-controls="cardio-tab-pane" aria-selected="true">Cardio</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="fuerza-tab" data-bs-toggle="tab" data-bs-target="#fuerza-tab-pane" type="button" role="tab" aria-controls="fuerza-tab-pane" aria-selected="false">Fuerza</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="flexibilidad-tab" data-bs-toggle="tab" data-bs-target="#flexibilidad-tab-pane" type="button" role="tab" aria-controls="flexibilidad-tab-pane" aria-selected="false">Flexibilidad</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="programas-tab" data-bs-toggle="tab" data-bs-target="#programas-tab-pane" type="button" role="tab" aria-controls="programas-tab-pane" aria-selected="false">Programas Personalizados</button>
+            </li>
+          </ul>
+  
+          <!-- Contenido de las pestañas -->
+          <div class="tab-content mt-4" id="myTabContent">
+            <div class="tab-pane fade show active row" id="cardio-tab-pane" role="tabpanel" aria-labelledby="cardio-tab">
+              <div class="col-md-6">
+                <img src="../img/cardio.jpg" alt="Clase de cardio" class="img-fluid">
+              </div>
+              <div class="col-md-6">
+                <h2>Cardio HIIT (High-Intensity Interval Training)</h2>
+                <p>Un programa de alta intensidad diseñado para quemar calorías rápidamente y mejorar la capacidad cardiovascular.</p>
+              </div>
+            </div>
+  
+            <div class="tab-pane fade row" id="fuerza-tab-pane" role="tabpanel" aria-labelledby="fuerza-tab">
+              <div class="col-md-6">
+                <img src="../img/pexels-cottonbro-7675412.jpg" alt="Clase de fuerza" class="img-fluid">
+              </div>
+              <div class="col-md-6">
+                <h2>Entrenamiento de Fuerza</h2>
+                <p>Programa orientado a aumentar la fuerza y tonificar los músculos. Incluye ejercicios con peso y resistencia.</p>
+              </div>
+            </div>
+  
+            <div class="tab-pane fade row" id="flexibilidad-tab-pane" role="tabpanel" aria-labelledby="flexibilidad-tab">
+              <div class="col-md-6">
+                <img src="../img/pexels-cottonbro-7675412.jpg" alt="Clase de flexibilidad" class="img-fluid">
+              </div>
+              <div class="col-md-6">
+                <h2>Clase de Flexibilidad</h2>
+                <p>Entrenamientos enfocados en mejorar la flexibilidad y prevenir lesiones.</p>
+              </div>
+            </div>
+  
+            <div class="tab-pane fade row" id="programas-tab-pane" role="tabpanel" aria-labelledby="programas-tab">
+              <div class="col-md-6">
+                <img src="../img/pexels-cottonbro-4761779.jpg" alt="Programas personalizados" class="img-fluid">
+              </div>
+              <div class="col-md-6">
+                <h2>Programas Personalizados</h2>
+                <p>Entrenamiento personalizado para alcanzar tus objetivos específicos.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
-
 
 
   <!-- pie de página-->
@@ -87,7 +148,8 @@
         </div>
       </div>
   </footer>
-
+  <script src="https://kit.fontawesome.com/348fa9bb1b.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 
