--- a/html/conoceMas.html
+++ b/html/conoceMas.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/quienesSomos.css" />
   <link rel="stylesheet" href="../css/conoceMas.css">
   <title>Espartanos Gym</title>
@@ -50,8 +51,8 @@
   <!-- contenido principal -->
   <main class="main">
 
-    <section class="general mt-5 pt-5">
-        <section class="misionVision container mt-4 d-flex flex-column justify-content-center align-items-center">
+    <section class="general pt-2">
+        <section class="misionVision container mt-3 d-flex flex-column justify-content-center align-items-center">
 
             <h1>Nuestra Misión y Visión</h1>
     
@@ -63,7 +64,7 @@
                     <h2>Visión</h2>
                     <p>Ser el gimnasio líder en nuestra comunidad, reconocido no solo por nuestros programas de entrenamiento, sino también por nuestra dedicación a la salud integral y al bienestar mental. Queremos que cada miembro se sienta parte de una familia que le apoya y le inspira.</p>
                 </div>
-                <div class="card p-3 col-6 justify-content-center">
+                <div class="card p-3 col-md-5 justify-content-center">
                     <img src="../img/pexels-scottwebb-28080.jpg" class="img-fluid" alt="Imagen Representativa">
                 </div>
             </div>
@@ -152,5 +153,8 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script src="https://kit.fontawesome.com/348fa9bb1b.js" crossorigin="anonymous"></script>
 
 </html>
