--- a/html/quienesSomos.html
+++ b/html/quienesSomos.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/quienesSomos.css" />
   <title>Espartanos Gym</title>
 
@@ -65,25 +66,33 @@
           </div>
   
          <!-- Imágenes al lado derecho: 2 arriba y 2 abajo -->
-         <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
-          <div class="row mb-4">
-            <div class="col-6">
-              <img src="../img/pexels-bemistermister-3490348.jpg" class="img-fluid" alt="Buena alimentación">
+         <div class="col-md-6 d-flex flex-column align-items-center justify-content-center" id="cont">
+          <div class="row m-3 p-3">
+            <div class="col-5 mb-3">
+              <div class="card">
+                <img src="../img/pexels-bemistermister-3490348.jpg" class="img-fluid" alt="Buena alimentación">
               <p>Buena alimentación</p>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="../img/pexels-olly-3766211.jpg" class="img-fluid" alt="Salud mental">
+            <div class="col-5 mb-3">
+              <div class="card">
+                <img src="../img/pexels-olly-3766211.jpg" class="img-fluid" alt="Salud mental">
               <p>Salud mental</p>
+              </div>            
             </div>
           </div>
-          <div class="row">
-            <div class="col-6">
-              <img src="../img/pexels-cottonbro-7675412.jpg" class="img-fluid" alt="Bienestar físico">
+          <div class="row m-3 p-3">
+            <div class="col-5 mb-3">
+              <div class="card">
+                <img src="../img/pexels-bemistermister-3490348.jpg" class="img-fluid" alt="Bienestar físico">
               <p>Bienestar físico</p>
+              </div>
             </div>
-            <div class="col-6">
-              <img src="../img/pexels-victorfreitas-703014.jpg" class="img-fluid" alt="Entrenamiento personalizado">
+            <div class="col-5 m-3">
+              <div class="card">
+                <img src="../img/pexels-olly-3766211.jpg" class="img-fluid" alt="Entrenamiento personalizado">
               <p>Entrenamiento personalizado</p>
+              </div>
             </div>
           </div>
         </div>
