--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">¿Quiénes somos?</a>
+            <a class="nav-link" href="./quienesSomos.html">¿Quiénes somos?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./entrenadores.html">Entrenadores</a>
