DAZ 20241111: Ajuste links scripts.

--- a/entrenadores.html
+++ b/entrenadores.html
@@ -54,7 +54,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">¿Quiénes somos?</a>
+              <a class="nav-link" href="./quienesSomos.html">¿Quiénes somos?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./entrenadores.html">Entrenadores</a>
@@ -219,5 +219,9 @@
     </div>      
   </div>
 </footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
