--- a/blog.html
+++ b/blog.html
@@ -196,6 +196,8 @@
   </div>
 </footer>
 
-<script src="blog.js" defer></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
