--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <header>
   <!-- Barra de Navegación -->
   <nav class="navbar navbar-expand-md navbar-dark py-3">
-    <div class="container">
+    <div class="container-sm">
       <!-- Logo -->
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img src="./img/logo.png" alt="Logo" class="d-inline-block align-text-top" style="width: 120px;">
       </a>
 
@@ -123,7 +123,7 @@
 
           <!-- Card 2: Clases y Programas -->
           <div class="col">
-              <a href="./clasesYprogramas.html" class="card text-decoration-none">
+              <a href="./clasesProgramas.html" class="card text-decoration-none">
                   <img src="./img/clases.jpg" class="card-img-top" alt="Clases y Programas">
                   <div class="card-body">
                       <h5 class="card-title">Clases y Programas</h5>
@@ -134,7 +134,7 @@
 
           <!-- Card 3: Blog y Recursos -->
           <div class="col">
-              <a href="#" class="card text-decoration-none">
+              <a href="./blog.html" class="card text-decoration-none">
                   <img src="./img/Blog.jpg" class="card-img-top" alt="Blog y Recursos">
                   <div class="card-body">
                       <h5 class="card-title">Blog y Recursos</h5>
@@ -166,7 +166,7 @@
                   <img src="./img/usuario1.jpg" class="user-image" alt="Usuario 1">
                   <div class="user-name">Juan Pérez</div>
                   <p class="comment">“El deporte me ha hecho sentir genial y lleno de energía.”</p>
-                  <div class="user-profession">Entrenador Personal</div>
+                  <div class="user-profession">Profesor de Matematicas</div>
                   <div class="stars">⭐⭐⭐⭐⭐</div>
               </div>
           </div>
@@ -177,7 +177,7 @@
                   <img src="./img/usuario2.jpg" class="user-image" alt="Usuario 2">
                   <div class="user-name">María López</div>
                   <p class="comment">“Las instalaciones son increíbles y me encantan las clases.”</p>
-                  <div class="user-profession">Estudiante de Deportes</div>
+                  <div class="user-profession">Marketing Digital</div>
                   <div class="stars">⭐⭐⭐⭐</div>
               </div>
           </div>
@@ -188,7 +188,7 @@
                   <img src="./img/usuario3.jpg" class="user-image" alt="Usuario 3">
                   <div class="user-name">Carlos García</div>
                   <p class="comment">“He mejorado mucho desde que empecé a entrenar aquí.”</p>
-                  <div class="user-profession">Atleta Amateur</div>
+                  <div class="user-profession">Ingeniero Civil</div>
                   <div class="stars">⭐⭐⭐⭐⭐</div>
               </div>
           </div>
@@ -199,7 +199,7 @@
                   <img src="./img/usuario4.jpg" class="user-image" alt="Usuario 4">
                   <div class="user-name">Laura Martínez</div>
                   <p class="comment">“Me siento más saludable y motivada gracias al deporte.”</p>
-                  <div class="user-profession">Nutricionista</div>
+                  <div class="user-profession">Administradora de empresas</div>
                   <div class="stars">⭐⭐⭐⭐⭐</div>
               </div>
           </div>
