--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -16,7 +16,7 @@
   <header>
     <!-- Barra de Navegación -->
     <nav class="navbar navbar-expand-md navbar-dark py-3">
-      <div class="container">
+      <div class="container-sm">
         <!-- Logo -->
         <a class="navbar-brand" href="#">
           <img src="./img/logo.png" alt="Logo" class="d-inline-block align-text-top" style="width: 120px;">
