--- a/Desafios.html
+++ b/Desafios.html
@@ -16,9 +16,9 @@
 <header>
   <!-- Barra de Navegación -->
   <nav class="navbar navbar-expand-md navbar-dark py-3">
-    <div class="container">
+    <div class="container-sm">
       <!-- Logo -->
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img src="./img/logo.png" alt="Logo" class="d-inline-block align-text-top" style="width: 120px;">
       </a>
 
