--- a/clasesProgramas.html
+++ b/clasesProgramas.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/clasesProgramas.css"> <!-- Vinculación con el archivo CSS -->
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -18,7 +19,7 @@
     <nav class="navbar navbar-expand-md navbar-dark py-3">
       <div class="container">
         <!-- Logo -->
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="./index.html">
           <img src="Img/logo.png" alt="Logo" class="d-inline-block align-text-top" style="width: 120px;">
         </a>
   
@@ -35,13 +36,13 @@
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="quienesSomos.html">¿Quiénes somos?</a>
+              <a class="nav-link" href="./quienesSomos.html">¿Quiénes somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Entrenadores</a>
+              <a class="nav-link" href="./entrenadores.html">Entrenadores</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tienda</a>
+              <a class="nav-link" href="./Tienda.html">Tienda</a>
             </li>
           </ul>
   
