--- a/entrenadores.html
+++ b/entrenadores.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">¿Quiénes somos?</a>
+              <a class="nav-link" href="./quienesSomos.html">¿Quiénes somos?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./entrenadores.html">Entrenadores</a>
@@ -101,7 +101,7 @@
             >
             <a
               href="./formCuenta.html"
-              class="btn btn-outline-light btn-sm active"
+              class="btn btn-outline-light btn-sm"
               type="button"
               >Crea tu cuenta</a
             >
@@ -219,5 +219,7 @@
     </div>      
   </div>
 </footer>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
