--- a/public/formCuenta.html
+++ b/public/formCuenta.html
@@ -137,14 +137,14 @@
           >
             <h2 class="text-center mb-4">Regístrate en Espartanos Gym</h2>
 
-            <form action="registro.html" method="post">
+            <form action="formCuenta.html" method="post">
               <!-- Nombre -->
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre completo</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="nombre"
+                  id="name"
                   name="nombre"
                   required
                 />
@@ -156,7 +156,7 @@
                 <input
                   type="email"
                   class="form-control"
-                  id="email"
+                  id="emailAddress"
                   name="email"
                   required
                 />
@@ -204,7 +204,7 @@
 
               <!-- Botón de Registro -->
               <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-primary btn-block">
+                <button type="submit" class="btn btn-primary  btn-block" id="confirm">
                   Registrarse
                 </button>
               </div>
@@ -256,6 +256,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="../script2.js"></script>
   </body>
 </html>
