--- a/public/formLogin.html
+++ b/public/formLogin.html
@@ -209,6 +209,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
